--- a/_layouts/product-index.html.slim
+++ b/_layouts/product-index.html.slim
@@ -275,13 +275,13 @@ layout: technology-base
 
     .large-24#development-tool.divider
       h4
-        a(href="a-mq/overview") Red Hat JBoss A-MQ
+        a(href="amq/overview") Red Hat JBoss A-MQ
       .row
         .large-16.columns
           p = page._a_mq
           p
             strong
-              a(href="a-mq/get-started") GET STARTED
+              a(href="amq/get-started") GET STARTED
               | &nbsp;&nbsp;&#124;&nbsp;&nbsp;SEE IT IN ACTION:&nbsp;
             a(href="#") IoT,
             a(href="#") DevOps,
@@ -291,7 +291,7 @@ layout: technology-base
             i.fa.fa-download
             |  Download Red Hat JBoss A-MQ
           .tool-links
-              a(href="a-mq/docs-and-apis")
+              a(href="amq/docs-and-apis")
                 i.fa.fa-file-text-o
                 |  Docs and APIs
               a(href="#")
