--- a/enterprise-java.html.slim
+++ b/enterprise-java.html.slim
@@ -19,7 +19,7 @@ hero_class: enterprise-java
     .large-12.column
       h4 Getting Started Is Easy
       asciidoc:   
-		Find all you need in the link:http://www.jboss.org/products/eap/get-started/[Getting Started Section] on JBoss developer. It's not much more than just hitting download and unzip into a folder of your choice. And we also provide link:http://www.jboss.org/products/eap/developer-materials[Developer Materials] and link:http://www.redhat.com/en/services/training[Training] to improve your skills, or the skills of your team, with our hands-on, role-based training for IT professionals and developers. If you feel the need for latest innovation and specifications, you need to look at link:http://wildfly.org/[WildFly]. This is the community version and helps you build flexible and lightweight applications.
+		Find all you need in the link:http://www.jboss.org/products/eap/get-started/[Getting Started Section] on JBoss developer. It's not much more than just hitting download and unzip into a folder of your choice. And we also provide link:http://www.jboss.org/products/eap/learn[learning resources] and link:http://www.redhat.com/en/services/training[training] to improve your skills, or the skills of your team, with our hands-on, role-based training for IT professionals and developers. If you feel the need for latest innovation and specifications, you need to look at link:http://wildfly.org/[WildFly]. This is the community version and helps you build flexible and lightweight applications.
     .large-6.column
 	h4 Learn About Technology	
 	asciidoc:     
