--- a/stylesheets/_slider.scss
+++ b/stylesheets/_slider.scss
@@ -5,9 +5,8 @@
 .slider-wrapper {
   position: relative;
   .slider {
-    overflow: hidden;
-    max-height:405px;
-    overflow: hidden;
+    // max-height:405px;
+    // overflow: hidden;
     &.rounded {
       border-radius:$global-radius;
       overflow: hidden;
