RHD-22 Created Product learn page

--- a/_layouts/get-involved.html.slim
+++ b/_layouts/get-involved.html.slim
@@ -122,7 +122,7 @@ ul.small-block-grid-1.large-block-grid-4
       a(href="http://drools.jboss.org" target="get_involved_detail")
         | JBoss Drools
       br
-      a(href="#{site.base_url}/products/brms/developer-materials/")
+      a(href="#{site.base_url}/products/brms/learn/")
         | JBoss BRMS Developer QuickStarts
       br
       a(href="http://ilesteban.wordpress.com/" target="get_involved_detail")
