--- a/_layouts/product-overview.html.slim
+++ b/_layouts/product-overview.html.slim
@@ -20,7 +20,7 @@ h2#overview Overview
         asciidoc:
           - Discuss on the link:#{page.product.forum.url}[#{page.product.abbreviated_name} Forums]
       asciidoc:
-        - Get started with one of our many link:../developer-materials?quickstarts[quickstarts].
+        - Get started with one of our many link:../learn?quickstarts[quickstarts].
         - View the link:#{page.product.documentation_url}[#{page.product.abbreviated_name} Documentation]
 
       a.moreinfolink(href="../resources")
