Fixing RHD-266 (filters for solutions learn pages)
This isn't working yet, Wes is going to take a look.

--- a/_layouts/solution-learn.html.slim
+++ b/_layouts/solution-learn.html.slim
@@ -3,10 +3,9 @@ layout: solution
 ---
 
 - page.title = "Find quickstarts, archetypes, BOMs, Tutorials, and other developer oriented materials for #{page.solution.name}."
-
 div(ng-app="dcp")
   .developer-materials(ng-controller="developerMaterialsController")
-    .large-24#developer-materials-filters
+    .large-24#developer-materials-filters(ng-init="filters.sys_tags = #{page.solution.tags.to_json.gsub(/"/, "'")}")
       = partial 'developer-materials-filters.html.slim'
     .text-content
       .developer-materials-results
@@ -14,3 +13,4 @@ div(ng-app="dcp")
 
     = javascripts("developer-materials-filter", true) do
       script src="#{site.base_url}/javascripts/vendor/chosen.jquery.min.js"
+
